2005-12-13  Chris Toshok  <toshok@ximian.com>

	* System.dll.sources: add
	System.Net.Configuration/FtpCachePolicyElement.cs.

2005-12-07  Robert Jordan  <robertj@gmx.net>

	* System.dll.sources: Added System.Net.Sockets/SocketError.cs.

2005-11-30  Gert Driesen  <drieseng@users.sourceforge.net>

	* System_test.dll.sources: Added CodeRemoveEventStatementTest.cs from
	System.CodeDom.

2005-11-26  Gert Driesen  <drieseng@users.sourceforge.net>

	* System_test.dll.sources: Added CodeGeneratorFromStatementTest.cs
	from Microsoft.VisualBasic.	

2005-11-20  Gert Driesen  <drieseng@users.sourceforge.net>

	* System_test.dll.sources: Added CodeNamespaceImportCollectionTest.cs,
	CodeNamespaceCollectionTest.cs, CodeTypeDeclarationCollectionTest.cs,
	CodeTypeMemberCollectionTest.cs, CodeTypeParameterCollectionTest.cs,
	CodeAttributeArgumentCollectionTest.cs, CodeDirectiveCollectionTest.cs,
	CodeAttributeDeclarationCollectionTest.cs, 
	CodeCatchClauseCollectionTest.cs, 
	CodeCommentStatementCollectionTest.cs.

2005-11-09  Zoltan Varga  <vargaz@gmail.com>

	* System_test.dll.sources: Add Test/System.Collections.Generic/SortedListTest.cs.

	* System.dll.sources: Add System.Collections.Generic/SortedList.cs.

2005-11-08  Gert Driesen  <drieseng@users.sourceforge.net>

	* System_test.dll.sources: Added CodeExpressionCollectionTest.cs,
	CodeParameterDeclarationExpressionCollectionTest.cs,
	CodeTypeReferenceCollectionTest.cs.

2005-11-04  Gert Driesen  <drieseng@users.sourceforge.net>

	* System_test.dll.sources: Added CodeCastExpressionTest.cs,
	CodeCatchClauseTest.cs, CodeChecksumPragmaTest.cs, 
	CodeConstructorTest.cs, CodeDefaultValueExpressionTest.cs;
	CodeDelegateCreateExpressionTest.cs, CodeEventReferenceExpressionTest.cs
	CodeGotoStatementTest.cs, CodeLabeledStatementTest.cs,
	CodeLinePragmaTest.cs, CodeMemberMethodTest.cs, 
	CodeMethodInvokeExpressionTest.cs, CodeMethodReferenceExpressionTest.cs,
	CodeNamespaceImportTest.cs, CodeNamespaceTest.cs, 